tests/snapshots/snapshot_sdk_types__chain_error_broken_hash.snap
---
source: tests/snapshot_sdk_types.rs
expression: err
---
{
  "type": "broken_hash",
  "index": 2,
  "run_id": "00000000-0000-4000-8000-000000000001"
}
