tests/snapshots/snapshot_sdk_types__chain_error_duplicate_id.snap
---
source: tests/snapshot_sdk_types.rs
expression: err
---
{
  "type": "duplicate_id",
  "id": "00000000-0000-4000-8000-000000000001"
}
