tests/snapshots/snapshot_sdk_types__chain_error_missing_parent.snap
---
source: tests/snapshot_sdk_types.rs
expression: err
---
{
  "type": "missing_parent",
  "index": 1,
  "parent_id": "00000000-0000-4000-8000-000000000002"
}
