tests/snapshots/snapshot_sdk_types__chain_error_out_of_order.snap
---
source: tests/snapshot_sdk_types.rs
expression: err
---
{
  "type": "out_of_order",
  "index": 3
}
