tests/snapshots/snapshot_sdk_types__chain_verification_valid.snap
---
source: tests/snapshot_sdk_types.rs
expression: result
---
{
  "valid": true,
  "errors": [],
  "chain_length": 2,
  "total_events": 0,
  "total_duration_ms": "[duration]"
}
