tests/snapshots/snapshot_sdk_types__cross_dialect_abp_to_gemini.snap
---
source: tests/snapshot_sdk_types.rs
expression: val
---
{
  "contents": [
    {
      "parts": [
        {
          "Text": "Refactor the auth module"
        }
      ],
      "role": "user"
    }
  ],
  "generation_config": {
    "maxOutputTokens": 4096
  },
  "model": "gemini-2.0-flash"
}
