tests/snapshots/snapshot_sdk_types__cross_dialect_abp_to_openai.snap
---
source: tests/snapshot_sdk_types.rs
expression: val
---
{
  "max_tokens": 4096,
  "messages": [
    {
      "content": "Refactor the auth module",
      "role": "user"
    }
  ],
  "model": "gpt-4"
}
