tests/snapshots/snapshot_sdk_types__envelope_event_assistant_delta.snap
---
source: tests/snapshot_sdk_types.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-fixed-001",
  "event": {
    "ts": "2025-01-15T12:00:00Z",
    "type": "assistant_delta",
    "text": "Hello"
  }
}
